--- a/index.html
+++ b/index.html
@@ -51,5 +51,9 @@
         </div>
     </div>
 
+    <footer style="text-align: center; padding: 20px; margin-top: 50px;">
+        <a href="/admin/" style="color: #ccc; text-decoration: none; font-size: 12px;">Admin</a>
+    </footer>
+
 </body>
 </html>
