--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         .project-info { padding: 15px; }
         .project-info h3 { margin: 0; font-size: 1.2rem; }
     </style>
+
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
 </head>
 <body>
 
@@ -50,6 +53,18 @@
             </div>
         </div>
     </div>
+
+    <script>
+    if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+        if (!user) {
+            window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+            });
+        }
+        });
+    }
+    </script>
 
     <footer style="text-align: center; padding: 20px; margin-top: 50px;">
         <a href="/admin/" style="color: #ccc; text-decoration: none; font-size: 12px;">Admin</a>
