--- a/index.html
+++ b/index.html
@@ -64,6 +64,42 @@
         }
         });
     }
+
+    async function loadProjects() {
+    const portfolio = document.getElementById('portfolio');
+    portfolio.innerHTML = 'Loading Projects...';
+
+    try {
+        const response = await fetch('https://api.github.com/repos/abd767d/radiant-alpaca-9d59f3/contents/content/projects');
+        const files = await response.json();
+        
+        portfolio.innerHTML = '';
+
+        for (let file of files) {
+            if (file.name.endsWith('.md')) {
+                const contentRes = await fetch(file.download_url);
+                const text = await contentRes.text();
+                
+                const title = text.match(/title: (.*)/)?.[1];
+                const image = text.match(/image: (.*)/)?.[1];
+
+                const card = `
+                    <div class="project-card">
+                        <img src="${image}" alt="${title}">
+                        <div class="project-info">
+                            <h3>${title}</h3>
+                        </div>
+                    </div>
+                `;
+                portfolio.innerHTML += card;
+            }
+        }
+        } catch (e) {
+            portfolio.innerHTML = 'Error or no projects yet.';
+        }
+    }
+
+    loadProjects();
     </script>
 
     <footer style="text-align: center; padding: 20px; margin-top: 50px;">
