--- a/index.html
+++ b/index.html
@@ -67,12 +67,17 @@
 
     async function loadProjects() {
     const portfolio = document.getElementById('portfolio');
+
+    const username = "Leenja"; 
+    const repo = "radiant-alpaca-9d59f3";
     portfolio.innerHTML = 'Loading Projects...';
 
     try {
-        const response = await fetch('https://api.github.com/repos/abd767d/radiant-alpaca-9d59f3/contents/content/projects');
-        const files = await response.json();
+        const response = await fetch(`https://api.github.com/repos/${username}/${repo}/contents/content/projects`);
         
+        if (!response.ok) throw new Error("Folder not found");
+
+        const files = await response.json();
         portfolio.innerHTML = '';
 
         for (let file of files) {
@@ -80,25 +85,26 @@
                 const contentRes = await fetch(file.download_url);
                 const text = await contentRes.text();
                 
-                const title = text.match(/title: (.*)/)?.[1];
-                const image = text.match(/image: (.*)/)?.[1];
+                const title = text.match(/title:\s*["']?(.*?)["']?(\r?\n|$)/)?.[1];
+                const image = text.match(/image:\s*["']?(.*?)["']?(\r?\n|$)/)?.[1];
 
-                const card = `
+                if (title && image) {
+                    const card = `
                     <div class="project-card">
                         <img src="${image}" alt="${title}">
-                        <div class="project-info">
-                            <h3>${title}</h3>
+                            <div class="project-info">
+                                <h3>${title}</h3>
+                            </div>
                         </div>
-                    </div>
-                `;
-                portfolio.innerHTML += card;
+                    `;
+                    portfolio.innerHTML += card;
+                }
             }
-        }
+        }   
         } catch (e) {
             portfolio.innerHTML = 'Error or no projects yet.';
         }
     }
-
     loadProjects();
     </script>
 
