--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
     const portfolio = document.getElementById('portfolio');
 
     const username = "Leenja"; 
-    const repo = "radiant-alpaca-9d59f3";
+    const repo = "Muhamad-Portfolio";
     portfolio.innerHTML = 'Loading Projects...';
 
     try {
-        const response = await fetch(`https://api.github.com/repos/${username}/${repo}/contents/content/projects`);
+        const response = await fetch(`https://github.com/Leenja/Muhamad-Portfolio/tree/main/content/projects`);
         
         if (!response.ok) throw new Error("Folder not found");
 
