--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interior Design Portfolio</title>
+    <title>Muhamad Kadam Portfolio</title>
     <style>
         body { font-family: sans-serif; margin: 0; background: #fafafa; color: #333; }
         header { padding: 2rem; text-align: center; background: #fff; }
@@ -42,17 +42,10 @@
 
     <header>
         <h1>Muhamad Kadam</h1>
-        <p>Interior Designs</p>
+        <p>Interior Designer</p>
     </header>
 
-    <div class="portfolio-grid" id="portfolio">
-        <div class="project-card">
-            <img src="https://via.placeholder.com/400x300" alt="Testing Project">
-            <div class="project-info">
-                <h3>Modern Living Room Design</h3>
-            </div>
-        </div>
-    </div>
+    <div class="portfolio-grid" id="portfolio"></div>
 
     <script>
     if (window.netlifyIdentity) {
