--- a/Admin/index.html
+++ b/Admin/index.html
@@ -3,10 +3,20 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Manage Projects - Dashboard</title>
+  <title>Dashboard | Muhamad Kadam</title>
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
   <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+
+  <script>
+    // If the user logs out, return them to the login page.
+    CMS.registerEventListener({
+      name: 'logout',
+      handler: () => {
+        window.netlifyIdentity.logout();
+      },
+    });
+  </script>
 </body>
 </html>
