Some edits in dashboard

--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
         <p style="color: #888; letter-spacing: 2px;">INTERIOR DESIGNER</p>
     </header>
 
+    <section class="about-section">
+        <div class="about-container">
+            <h2 id="about-title">About Me</h2>
+            <p id="about-text">
+                Hello, I'm Muhamad Kadam, an interior designer passionate about creating spaces that blend elegance and comfort.
+                I believe every corner of your home tells a story, and my mission is to transform your vision into a tangible reality that reflects your personality down to the smallest detail.
+            </p>
+        </div>
+    </section>
+
     <div class="portfolio-grid" id="portfolio">
         </div>
 
