--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <section class="about-section">
         <div class="about-container">
-            <h2 id="about-title">About Me</h2>
-            <p id="about-text">
+            <h2>About Me</h2>
+            <p>
                 Hello, I'm Muhamad Kadam, an interior designer passionate about creating spaces that blend elegance and comfort.
                 I believe every corner of your home tells a story, and my mission is to transform your vision into a tangible reality that reflects your personality down to the smallest detail.
             </p>
